@@ -22,8 +22,10 @@
 #ifndef Rcpp__InputParameter__h
 #define Rcpp__InputParameter__h
 
-namespace Rcpp {
+namespace Rcpp { 
     
+    // default implementation used for pass by value and modules objects
+    // as<> is called on the conversion operator
     template <typename T>
     class InputParameter {
     public:
@@ -34,6 +36,48 @@ namespace Rcpp {
     private:
         SEXP x ;
     } ;
+    
+    // impl for references. It holds an object at the constructor and then 
+    // returns a reference in the reference operator
+    template <typename T>
+    class ReferenceInputParameter {
+    public:
+        typedef T& reference ;
+        ReferenceInputParameter(SEXP x_) : obj( as<T>(x_) ){}
+        
+        inline operator reference() { return obj ; }
+        
+    private:
+        T obj ;
+    } ;
+    
+    // same for const references
+    template <typename T>
+    class ConstReferenceInputParameter {
+    public:
+        typedef const T& const_reference ;
+        ConstReferenceInputParameter(SEXP x_) : obj( as<T>(x_) ){}
+        
+        inline operator const_reference() { return obj ; }
+        
+    private:
+        T obj ;
+    } ;
+    
+    namespace traits{
+        template <typename T>
+        struct input_parameter {
+            typedef typename Rcpp::InputParameter<T> type ;
+        } ;
+        template <typename T>
+        struct input_parameter<T&> {
+            typedef typename Rcpp::ReferenceInputParameter<T> type ;
+        } ;
+        template <typename T>
+        struct input_parameter<const T&> {
+            typedef typename Rcpp::ConstReferenceInputParameter<T> type ;
+        } ;
+    }    
     
 }
 
